Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-656

pn_transport_close_{head, tail} no longer return an error code on framing error.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • proton-0.8
    • proton-0.8
    • proton-c
    • None

    Description

      In the 0.7 release, the transport interfaces pn_transport_close_head() and pn_transport_close_tail() used to return an error should the close occur at an 'unexpected' point on the protocol (framing error, for example).

      The behavior no longer occurs on trunk. This results in an API change.

      Attachments

        Activity

          People

            Unassigned Unassigned
            kgiusti Ken Giusti
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: