Added events: PN_CONNECTION_BOUND/UNBOUND, PN_TRANSPORT_HEAD_CLOSED, PN_TRANSPORT_TAIL_CLOSED, PN_TRANSPORT_CLOSED, and PN_TRANSPORT_ERROR. This should address PROTON-656

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1625784 13f79535-47bb-0310-9956-ffa450edef68